--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,15 +53,23 @@ h5 {
   .flexBetween {
     @apply flex items-center justify-between;
   }
-  .btn_green {
+  .btnGreen {
     @apply bg-green border-none rounded-lg p-2 text-white hover:bg-dark;
   }
 
+  .btnDark {
+    @apply bg-dark border-none w-2/4 rounded-lg p-2 my-4 text-white hover:bg-dark;
+  }
+
   .authContainer {
-    @apply border-gray py-4 mx-auto w-[800px] text-center;
+    @apply border-gray mx-auto my-24 text-center;
   }
 
   .authInputBox {
-    @apply border border-gray rounded-sm px-8 py-2 my-2 text-left;
+    @apply border border-gray rounded-sm px-8 py-2 my-3 text-left;
+  }
+
+  .formBox {
+    @apply border rounded-sm w-1/3 mx-auto py-6 bg-white;
   }
 }
