--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  margin: 10px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
@@ -58,11 +58,11 @@ h5 {
   }
 
   .btnDark {
-    @apply bg-dark border-none w-2/4 rounded-lg p-2 my-4 text-white hover:bg-dark;
+    @apply bg-dark border-none w-2/4 rounded-lg py-2 my-4 text-white hover:bg-dark;
   }
 
   .authContainer {
-    @apply border-gray mx-auto my-24 text-center;
+    @apply border-gray mx-auto my-12 text-center;
   }
 
   .authInputBox {
@@ -70,6 +70,10 @@ h5 {
   }
 
   .formBox {
-    @apply border rounded-sm w-1/3 mx-auto py-6 bg-white;
+    @apply border rounded-sm w-1/3 mx-auto bg-white;
+  }
+
+  .userNameNav {
+    @apply bg-dark text-white rounded-full;
   }
 }
