--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 * {
-  padding: 10px;
   box-sizing: border-box;
 }
 
 body {
   font-size: 16px;
+  position: relative;
 }
 
 a,
@@ -72,7 +72,7 @@ h5 {
   }
 
   .btnDark {
-    @apply bg-dark border-none w-2/4 rounded-lg py-2 text-white hover:bg-dark;
+    @apply bg-dark border-none w-2/4 rounded-lg py-2 my-2 text-white hover:bg-dark;
   }
 
   .authContainer {
