Feat: User's Journey Tracking Dashboard (#19)
* adjust css styling generally

* WIP-update journey->category->goods->status

* categorySlug->subcategorySlug->pantry update

* render pantry with its category and product details

* update status, icon and rendering

* JourneyStatus comp. and profile's general tailwind css

* initial wrap up for journey creation and navigation and styling

* skip test, remove deleted component

* comment some tests out for now

* test cases temp comment

* add action, no-action buttion type

* WIP: dashboard status update, product detail modal, context

* import error

* clean cache, re-build node module

* WIP: dashboard default

* Renaming

* git mv

* Fixing more paths

* Dashboard default page

* Revert "Dashboard default page"

This reverts commit c05cfeae8792aa5c71f1334f68ae504060790367.

* Dashboard default page

* tiral

* Revert "tiral"

This reverts commit 36c5001f610d6708b315b2d00b16efa92cb3ce54.

* Revert "Dashboard default page"

This reverts commit 6a427e24db6317e3a2ae6a4a19793671a57bdf54.

* revert cherry pick and add default dashboard page change

* move logout button to navbar's avatar Account component

* product detail, modal styling and eliminate category button action

* TODO:Pantry update comment

* refactor

* status updates and product addition to pantry

* WIP: temp rendering pantry based on addition and status; todo:deletion, data sync

* Removing install-state

* Removing install-state

* Updating lock filr

---------

Co-authored-by: Matt Suhay <matthew.suhay@gmail.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 
 body {
   font-size: 16px;
+  position: relative;
 }
 
 a,
@@ -58,36 +59,16 @@ h5 {
   font-weight: 200;
 }
 
+.modalStyle {
+  border: 1px solid gray;
+}
+
 @layer utilities {
-  .flexBetween {
-    @apply flex items-center justify-between;
+  .profile {
+    @apply text-green-800 ml-10;
   }
 
-  .flexEnd {
-    @apply flex justify-end;
-  }
-
-  .btnGreen {
-    @apply bg-green border-none rounded-lg p-2 text-white hover:bg-dark;
-  }
-
-  .btnDark {
-    @apply bg-dark border-none w-2/4 rounded-lg py-2 text-white hover:bg-dark;
-  }
-
-  .authContainer {
-    @apply border-medium mx-auto my-12 text-center;
-  }
-
-  .authInputBox {
-    @apply border border-medium rounded-sm px-8 py-2 my-2 text-left;
-  }
-
-  .formBox {
-    @apply border rounded-sm w-1/3 mx-auto bg-white;
-  }
-
-  .userNameNav {
-    @apply bg-dark text-white rounded-full;
+  .modalStyle {
+    @apply border-x-gray-100 rounded-md bg-opacity-75 bg-gray-200 text-white mt-5 mx-auto;
   }
 }
