--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
 
 a,
 p,
+li,
 span {
   font-family: var(--font-p);
 }
@@ -39,19 +40,19 @@ h2 {
 h3 {
   font-family: var(--font-header);
   font-weight: bold;
-  font-size: 16px;
+  font-size: 30px;
 }
 
 h4 {
   font-family: var(--font-header);
   font-weight: bold;
-  font-size: 15px;
+  font-size: 25px;
 }
 
 h5 {
   font-family: var(--font-header);
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .subHeader {
